[project]
name = "ytm"
version = "0.1.0"
description = "Stream YouTube audio from your terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "textual>=1.0",
]

[project.scripts]
ytm = "ytm_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ytm_cli"]
